# File-System

./: .gitignore  CMakeLists.txt  IOSystem.cpp  IOSystem.h  OFT.cpp  directory_entry.cpp  directory_entry.h  file_descriptor.cpp  file_descriptor.h  file_system_constants.h  filesystem.cpp  filesystem.h  filesystem_feature.cpp  fs_config.h  input_reader.cpp  input_reader.h  main.cpp  oft.cpp  oft.h
File System/: File System.sln
File System/File System/: Directory.cpp  File System.sln  File System.vcxproj  File System.vcxproj.filters  IOSystem.cpp  InputReader.cpp  InputReader.h  OFT.cpp  directory.h  directory_entry.h  file_descriptor.cpp  file_descriptor.h  file_system_constants.h  filesystem.cpp  filesystem.h  iosystem.conf  main.cpp  oft.h
IOSystem/: CHSSystem.cpp  CHSSystem.h  IOSystem.cpp  IOSystem.h  LBASystem.cpp  LBASystem.h  io_config.h
IO_system/: IOSystem.cpp  IOSystem.h
UserUI/: InputReader.cpp
components/: directory_entry.h  file_descriptor.h
tests/: README.md  desc.txt  dummy.txt  ios_lba.cpp  ios_test.cpp  t1  t10  t11  t12  t2  t3  t4  t5  t6  t7  t8  t9
utils/: disk_utils.cpp  disk_utils.h  errors.h  file_utils.cpp  file_utils.h
